--- a/playoff.html
+++ b/playoff.html
@@ -54,35 +54,35 @@
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
-            <div class="round-details">štvrťfinále<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
+            <div class="round-details">Semifinále konferencie<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="20"> HK Poprad<span class="score">1</span></li>
+                <li class="team team-bottom"><img src="img/logo/hc_kosice.png" height="20"> HC Košice<span class="score">2</span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hc_07_detva.png" height="20"> HK 07 Detva<span class="score">1</span></li>
+                <li class="team team-bottom"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/Skalica.png" height="20"> HK Skalica<span class="score">2</span></li>
+                <li class="team team-bottom"><img src="img/logo/piestany.png" height="15"> ŠHK 37 Piešťany<span class="score">0</span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
-                <li class="team team-bottom"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hkm_zvolen.png" height="20"> HKM Zvolen<span class="score">0</span></li>
+                <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">2</span></li>
             </ul>           
                                                
         </div>  <!-- END ROUND QUATER -->
 
-        <div class="round round-two"> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
-            <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
+        <div class="round round-two current"> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
+            <div class="round-details">Finále konferencie<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
-                <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
+                <li class="team team-top"><img src="img/logo/hc_kosice.png" height="20"> HC Košice<span class="score">0</span></li>
+                <li class="team team-bottom"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">1</span></li>
             </ul>   
             <ul class="matchup">
-                <li class="team team-top">&nbsp;<span class="score">&nbsp;</span></li>
-                <li class="team team-bottom">&nbsp;<span class="score">&nbsp;</span></li>
+                <li class="team team-top"><img src="img/logo/Skalica.png" height="20"> HK Skalica<span class="score">1</span></li>
+                <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">2</span></li>
             </ul>   
                                                   
         </div>  <!-- END ROUND SEMI -->
@@ -94,7 +94,7 @@
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
                 <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
-                <li class="team team-bottom">&nbsp;<span class="vote-count">&nbsp;</span></li>
+                <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="vote-count">&nbsp;</span></li>
             </ul>
         </div>
 </div>
