--- a/team.html
+++ b/team.html
@@ -265,7 +265,7 @@
 
 
 <div class="zvolen-team" >
-        <h3 style="text-align: center; color: white; font-weight: bold;">MHK ZVOLEN </h3> 
+        <h3 style="text-align: center; color: white; font-weight: bold;">HKM ZVOLEN </h3> 
         <img class="team-logo" src="img/logo/hkm_zvolen.png" height="100">
         <img src="img/jersey-nhl/zvolen.png" height="150" style="margin-left: 50px;">
         <img src="img/jersey-nhl/zvolen-vonku.png" height="150">
