--- a/playoff.html
+++ b/playoff.html
@@ -113,25 +113,25 @@
             </thead>
             <thead>
                 <th>Dátum</th>
-                <th>Doma</th>
+                <th style="width: 180px;">Doma</th>
                 <th>Výsledok</th>
-                <th>Vonku</th>
+                <th style="width: 180px;">Vonku</th>
             </thead>
             <tbody>
                <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
+                    <td class="datum-playoff">1.8.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a> </td>
                     <td class="vysledok"><b></b></td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td class="datum-playoff"></td>
+                    <td class="datum-playoff">2.8.2020</td>
                     <td></td>
                     <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                 </tr>
                <tr>
-                    <td class="datum-playoff"></td>
+                    <td class="datum-playoff">5.8.2020</td>
                     <td></td>
                     <td class="vysledok"><b></b></td>
                     <td></td>
@@ -144,29 +144,29 @@
         <table class="tabulka-zapasov-playoff">
             <thead>
                 <th></th>
-                <th colspan="3">Semifinále</th>               
+                <th colspan="3">Finále konferencie</th>               
             </thead>
             <thead>
                 <th>Dátum</th>
-                <th>Doma</th>
+                <th style="width: 180px;">Doma</th>
                 <th>Výsledok</th>
-                <th>Vonku</th>
+                <th style="width: 180px;">Vonku</th>
             </thead>
             <tbody>
                 <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td class="datum-playoff">25.7.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a> </td>
+                    <td class="vysledok"><b>1:2sn</b></td>
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a> </td>
                 </tr>
                 <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
+                    <td class="datum-playoff">26.7.2020 </td>
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
                     <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
                 </tr>
                 <tr class="posledny-zapas">
-                    <td class="datum-playoff"></td>
+                    <td class="datum-playoff">29.7.2020</td>
                     <td></td>
                     <td class="vysledok"><b></b></td>
                     <td></td>
@@ -174,38 +174,38 @@
 
 
                 <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td class="datum-playoff">19.7.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
+                    <td class="vysledok"><b>3:2sn</b></td>
+                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
                 </tr>
                 <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td class="datum-playoff">22.7.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
+                    <td class="vysledok"><b>3:2sn</b></td>
+                    <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                 </tr>
                 <tr>
-                    <td class="datum-playoff"></td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td class="datum-playoff">25.7.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
+                    <td class="vysledok"><b>8:2</b></td>
+                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
                 </tr>
             </tbody>
         </table>
 
 
 
-        <table class="tabulka-zapasov-playoff">
+        <table class="tabulka-zapasov-playoff" id="hide">
             <thead>
                 <th></th>
                 <th colspan="3">Štvrťfinále</th>               
             </thead>
             <thead>
                 <th>Dátum</th>
-                <th>Doma</th>
+                <th style="width: 180px;">Doma</th>
                 <th>Výsledok</th>
-                <th>Vonku</th>
+                <th style="width: 180px;">Vonku</th>
             </thead>
             <tbody>
                 <tr>
@@ -293,7 +293,7 @@
 .zapasy-play-off{
     height: 600px;
     padding-top: 50px;
-    display: none;
+
 }
 .datum-playoff th{
     width: 50px;
@@ -313,7 +313,9 @@
 .posledny-zapas{
     border-bottom: 2px solid #E4721F;
 }
-
+#hide{
+    display: none;
+}
 
 </style>
 
