--- a/playoff.html
+++ b/playoff.html
@@ -118,13 +118,13 @@
                 <th style="width: 180px;">Vonku</th>
             </thead>
             <tbody>
-               <tr>
+               <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">1.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a> </td>
                     <td class="vysledok"><b></b></td>
                     <td></td>
                 </tr>
-                <tr>
+                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">2.8.2020</td>
                     <td></td>
                     <td class="vysledok"><b></b></td>
@@ -153,13 +153,13 @@
                 <th style="width: 180px;">Vonku</th>
             </thead>
             <tbody>
-                <tr>
+                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">25.7.2020</td>
                     <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a> </td>
                     <td class="vysledok"><b>1:2sn</b></td>
                     <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a> </td>
                 </tr>
-                <tr>
+                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">26.7.2020 </td>
                     <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
                     <td class="vysledok"><b></b></td>
@@ -173,19 +173,19 @@
                 </tr>
 
 
-                <tr>
+                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">19.7.2020</td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                     <td class="vysledok"><b>3:2sn</b></td>
                     <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
                 </tr>
-                <tr>
+                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">22.7.2020</td>
                     <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
                     <td class="vysledok"><b>3:2sn</b></td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                 </tr>
-                <tr>
+                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">25.7.2020</td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                     <td class="vysledok"><b>8:2</b></td>
@@ -315,6 +315,9 @@
 }
 #hide{
     display: none;
+}
+#spodnahranica-zapasy{
+    border-bottom: 1px solid #fc9e58;
 }
 
 </style>
