--- a/playoff.html
+++ b/playoff.html
@@ -317,7 +317,7 @@
     display: none;
 }
 #spodnahranica-zapasy{
-    border-bottom: 1px solid #fc9e58;
+    border-bottom: 1px solid #ffb985;
 }
 
 </style>
