--- a/playoff.html
+++ b/playoff.html
@@ -109,7 +109,7 @@
         <table class="tabulka-zapasov-playoff">
             <thead>
                 <th></th>
-                <th colspan="3">Finále</th>               
+                <th colspan="3">Finále Play-off</th>               
             </thead>
             <thead>
                 <th>Dátum</th>
