--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
     
   
 
- <div class="rozdelenie-clankov">   
+ <div class="rozdelenie-clankov"> 
+
+ <div class="clanky-mobil" style="">
+    <div  align="center"><img src="img/finaleplayoff.jpg" height="350" width="500"></div>
+    <span class="news">News</span>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Poznáme prvého finalistu 1. sezóny</p>
+       <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> tu máme prvého finalistu play-off! Za stavu série 1:1 privítal Trenčín na domácom ľade Skalicu, kde vyhral vysoko 8:2! čím si zaručil postup do finále play-off. Manažér Dukly je nesmierne spokojný ale zároveň aj prekvapený, že to dotiahli tak ďaleko. </h4>
+   </div> 
+
    <div class="clanky-mobil" style="">
     <img class="mobile-responsive-img" src="img/vsetky-kluby.png" height="257">
     <span class="news">News</span>
@@ -62,8 +70,10 @@
     <span class="news">News</span>
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Manažérske kreslo v Bystrici</p>
        <h4>Ďalšia zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
-   </div> 
+   </div>    
+
  </div> 
+
 
 
  <div class="background-all-stars">
