--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  <div class="clanky-mobil" style="">
     <div  align="center"><img src="img/finaleplayoff.jpg" height="350" width="500"></div>
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Poznáme prvého finalistu 1. sezóny</p>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Poznáme prvého finalistu Play-off!</p>
        <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> tu máme prvého finalistu play-off! Za stavu série 1:1 privítal Trenčín na domácom ľade Skalicu, kde vyhral vysoko 8:2! čím si zaručil postup do finále play-off. Manažér Dukly je nesmierne spokojný ale zároveň aj prekvapený, že to dotiahli tak ďaleko. </h4>
    </div> 
 
