--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    <div class="clanky-mobil" style="">
     <img class="mobile-responsive-img" src="img/vsetky-kluby.png" height="257">
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">2.sezóna štartuje 8.8.2020</p>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">2.sezóna oficiálne štartuje 8.8.2020</p>
        <h4>V lige nastalo pár zmien. Do ligy prišli tri nové tímy a to <b>Žilina, Bardejov a Nitra</b>, ktorú sme nedokázali získať v prvej sezóne. <b>Nitru</b> si pod krídla do 2.sezóny zobral manažér <b>Zero Zhen</b>. Naopak z ligy odstúpila <b>Gelnica, Martin a Piešťany</b>. Manažér Piešťan, ktoré odstúpili by časom uvítal návrat, ktorý teraz nie je možný kvôli plnej kapacite lige. Vedenie ligy na to bude v budúcích sezónach myslieť.</h4>
    </div> 
 
