--- a/playoff.html
+++ b/playoff.html
@@ -78,7 +78,7 @@
             <div class="round-details">Finále konferencie<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/hc_kosice.png" height="20"> HC Košice<span class="score">0</span></li>
-                <li class="team team-bottom"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">1</span></li>
+                <li class="team team-bottom"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
             </ul>   
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/Skalica.png" height="20"> HK Skalica<span class="score">1</span></li>
@@ -93,7 +93,7 @@
             <i class="fa fa-trophy"></i>
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
-                <li class="team team-top">&nbsp;<span class="vote-count">&nbsp;</span></li>
+                <li class="team team-top"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="vote-count">&nbsp;</span></li>
                 <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="vote-count">&nbsp;</span></li>
             </ul>
         </div>
@@ -122,11 +122,11 @@
                     <td class="datum-playoff">1.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a> </td>
                     <td class="vysledok"><b></b></td>
-                    <td></td>
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="20"> HK Spišská Nová Ves</td>
                 </tr>
                 <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">2.8.2020</td>
-                    <td></td>
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="20"> HK Spišská Nová Ves</td>
                     <td class="vysledok"><b></b></td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                 </tr>
