--- a/playoff.html
+++ b/playoff.html
@@ -88,13 +88,13 @@
         </div>  <!-- END ROUND SEMI -->
 </div> 
 
-<div class="champion">
-         <div class="final">
+<div class="champion current">
+         <div class="final" >
             <i class="fa fa-trophy"></i>
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
-                <li class="team team-top"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="vote-count">&nbsp;</span></li>
-                <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="vote-count">&nbsp;</span></li>
+                <li class="team team-top" align="left"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="vote-count">&nbsp;</span></li>
+                <li class="team team-bottom" align="left"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="vote-count">&nbsp;</span></li>
             </ul>
         </div>
 </div>
@@ -162,7 +162,7 @@
                 <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">26.7.2020 </td>
                     <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
-                    <td class="vysledok"><b></b></td>
+                    <td class="vysledok"><b>5:4</b></td>
                     <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
                 </tr>
                 <tr class="posledny-zapas">
