--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
  <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/finaleplayoff.jpg" height="350" width="500"></div>
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Poznáme prvého finalistu Play-off!</p>
-       <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> tu máme prvého finalistu play-off! Za stavu série 1:1 privítal Trenčín na domácom ľade Skalicu, kde vyhral vysoko 8:2! čím si zaručil postup do finále play-off. Manažér Dukly je nesmierne spokojný ale zároveň aj prekvapený, že to dotiahli tak ďaleko. </h4>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Finále Play-off pozná svojích účastníkov</p>
+       <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> sa Trenčínu podarilo zvíťaziť v rozhodujúcom zápase vysoko 8:2! a postúpili do finále. Svojho súpera spoznali o jedeň deň neskôr <b>Spišská</b> vyhrala svoj druhý zápas proti <b>Košiciam</b> a nedala im tak šancu sa dostať do finále a za stavu série 2:0 si zabujej o pohár <b>Vladimíra Dzurillu</b> s Trenčínom. Košice majú stále šancu o medjalové umiestnenie, o ktoré sa pobiju so Skalicou.</h4>
    </div> 
 
    <div class="clanky-mobil" style="">
