--- a/playoff.html
+++ b/playoff.html
@@ -57,19 +57,19 @@
             <div class="round-details">Semifinále konferencie<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/hk_poprad.png" height="20"> HK Poprad<span class="score">1</span></li>
-                <li class="team team-bottom"><img src="img/logo/hc_kosice.png" height="20"> HC Košice<span class="score">2</span></li>
+                <li class="team team-bottom" style="background-color: rgb(218,165,32, 0.8);"><img src="img/logo/hc_kosice.png" height="20"> HC Košice<span class="score">2</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/hc_07_detva.png" height="20"> HK 07 Detva<span class="score">1</span></li>
-                <li class="team team-bottom"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
+                <li class="team team-bottom" style="background-color: rgb(218,165,32, 0.8);"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><img src="img/logo/Skalica.png" height="20"> HK Skalica<span class="score">2</span></li>
+                <li class="team team-top" style="background-color: rgb(218,165,32, 0.8);"><img src="img/logo/Skalica.png" height="20"> HK Skalica<span class="score">2</span></li>
                 <li class="team team-bottom"><img src="img/logo/piestany.png" height="15"> ŠHK 37 Piešťany<span class="score">0</span></li>
             </ul>
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/hkm_zvolen.png" height="20"> HKM Zvolen<span class="score">0</span></li>
-                <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">2</span></li>
+                <li class="team team-bottom" style="background-color: rgb(218,165,32, 0.8);"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">2</span></li>
             </ul>           
                                                
         </div>  <!-- END ROUND QUATER -->
@@ -78,11 +78,11 @@
             <div class="round-details">Finále konferencie<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/hc_kosice.png" height="20"> HC Košice<span class="score">0</span></li>
-                <li class="team team-bottom"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
+                <li class="team team-bottom" style="background-color: rgb(218,165,32, 0.8);"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
             </ul>   
             <ul class="matchup">
                 <li class="team team-top"><img src="img/logo/Skalica.png" height="20"> HK Skalica<span class="score">1</span></li>
-                <li class="team team-bottom"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">2</span></li>
+                <li class="team team-bottom" style="background-color: rgb(218,165,32, 0.8);"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">2</span></li>
             </ul>   
                                                   
         </div>  <!-- END ROUND SEMI -->
@@ -122,13 +122,47 @@
                     <td class="datum-playoff">1.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a> </td>
                     <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> HK Spišská Nová Ves</td>
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
                 </tr>
                 <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">2.8.2020</td>
-                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> HK Spišská Nová Ves</td>
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
                     <td class="vysledok"><b></b></td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
+                </tr>
+               <tr>
+                    <td class="datum-playoff">5.8.2020</td>
+                    <td></td>
+                    <td class="vysledok"><b></b></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
+
+        <table class="tabulka-zapasov-playoff">
+            <thead>
+                <th></th>
+                <th colspan="3">O 3.miesto</th>               
+            </thead>
+            <thead>
+                <th>Dátum</th>
+                <th style="width: 180px;">Doma</th>
+                <th>Výsledok</th>
+                <th style="width: 180px;">Vonku</th>
+            </thead>
+            <tbody>
+               <tr id="spodnahranica-zapasy">
+                    <td class="datum-playoff">1.8.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
+                    <td class="vysledok"><b></b></td>
+                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
+                </tr>
+                <tr id="spodnahranica-zapasy">
+                    <td class="datum-playoff">2.8.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
+                    <td class="vysledok"><b></b></td>
+                    <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
                 </tr>
                <tr>
                     <td class="datum-playoff">5.8.2020</td>
