--- a/playoff.html
+++ b/playoff.html
@@ -51,6 +51,48 @@
 
     <section id="bracket">
     <div class="container">
+
+        <table class="tabulka-zlatakorcula">
+        <thead>
+            <th><img src="img/korcula.png" height="18"></th>
+            <th >Zlatá Korčuľa</th> 
+            <th></th>
+            <th></th>
+            <th class="bodovanie">B</th>
+            <th class="bodovanie">G</th>
+            <th class="bodovanie">A</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="umiestnenie-zlatakorcula" style="background-color: #DAA520;text-align: center;">1.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Ladislav Žember</td>
+                <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Spišská</td>
+                <td class="bodovanie">8</td>
+                <td class="bodovanie">6</td>
+                <td class="bodovanie">2</td>
+            </tr>
+            <tr>
+                <td class="umiestnenie-zlatakorcula" style="background-color: #C0C0C0;text-align: center;">2.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Ján Galis</td>
+                <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Spišská</td>
+                <td class="bodovanie">6</td>
+                <td class="bodovanie">5</td>
+                <td class="bodovanie">1</td>
+            </tr>
+            <tr>
+                <td class="umiestnenie-zlatakorcula" style="background-color: #cd7f32;text-align: center;">3.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Derek Syed</td>
+                <td><img src="img/small/skalica-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Skalica</td>
+                <td class="bodovanie">6</td>
+                <td class="bodovanie">1</td>
+                <td class="bodovanie">5</td>
+            </tr>
+      </tbody>
+  </table>
+
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
@@ -101,7 +143,11 @@
 <div>
     
 </div>
+
+
 </div>
+
+
 </section>
 
 
