--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div  align="center"><img class="mobile-responsive-img" src="img/finaleplayoff.jpg" height="350" width="500"></div>
     <span class="news">News</span>
        <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Finále Play-off pozná svojích účastníkov</p>
-       <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> sa Trenčínu podarilo zvíťaziť v rozhodujúcom zápase vysoko 8:2! a postúpili do finále. Svojho súpera spoznali o jedeň deň neskôr keď <b>Spišská</b> vyhrala svoj druhý zápas proti <b>Košiciam</b> a nedala im tak šancu sa dostať do finále a za stavu série 2:0 si zabuje o pohár <b>Vladimíra Dzurillu</b> s Trenčínom. Košice majú stále šancu o medajlové umiestnenie, o ktoré sa pobijú so Skalicou.</h4>
+       <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> sa Trenčínu podarilo zvíťaziť v rozhodujúcom zápase vysoko 8:2! a postúpili do finále. Svojho súpera spoznali o jedeň deň neskôr keď <b>Spišská</b> vyhrala svoj druhý zápas proti <b>Košiciam</b> a nedala im tak šancu sa dostať do finále a za stavu série 2:0 si zabuje o pohár <b>Vladimíra Dzurillu</b> s Trenčínom. Košice majú stále šancu o medajlové umiestnenie, o ktoré sa pobiju so Skalicou.</h4>
    </div> 
 
    <div class="clanky-mobil" style="">
