--- a/managers.html
+++ b/managers.html
@@ -246,7 +246,7 @@
 
             <table class="manazer-ucast" align="center">
                 <thead>
-                    <th colspan="2"><img src="img/logo/hc_07_detva.png" height="25"> HK Dukla Ingema Michalovce</th>
+                    <th colspan="2"><img src="img/logo/hc_07_detva.png" height="25"> HK 07 Detva</th>
                     <th></th>
                     </thead>
                 <tbody>
