--- a/playoff.html
+++ b/playoff.html
@@ -90,6 +90,24 @@
                 <td class="bodovanie">1</td>
                 <td class="bodovanie">5</td>
             </tr>
+             <tr>
+                <td class="umiestnenie-zlatakorcula" style="text-align: center;">4.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Herman Lohmus</td>
+                <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Trenčín</td>
+                <td class="bodovanie">6</td>
+                <td class="bodovanie">0</td>
+                <td class="bodovanie">6</td>
+            </tr>
+            <tr>
+                <td class="umiestnenie-zlatakorcula" style="text-align: center;">5.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Chris Graham</td>
+                <td><img src="img/small/kosice-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Košice</td>
+                <td class="bodovanie">5</td>
+                <td class="bodovanie">5</td>
+                <td class="bodovanie">0</td>
+            </tr>
       </tbody>
   </table>
 
