--- a/playoff.html
+++ b/playoff.html
@@ -29,7 +29,7 @@
                 <li class="li-navbar"><a href="index.html" style="text-decoration: none; color: white;">News</a></li>
                 <li class="li-navbar"><a href="schedule.html" style="text-decoration: none;color: white;">Schedule</a></li>
                 <li class="li-navbar"><a href="standings.html" style="text-decoration: none;color: white;">Standings</a></li>
-                <li class="li-navbar"><a href="#" style="text-decoration: none;color: white;">Stats</a></li>
+                <li class="li-navbar"><a href="stats.html" style="text-decoration: none;color: white;">Stats</a></li>
                 <li class="li-navbar"><a href="playoff.html" style="text-decoration: none;color: white;">Play-off</a></li>
                 <li class="li-navbar"><a href="team.html" style="text-decoration: none;color: white;">Teams</a></li>
                 <li class="li-navbar"><a href="halloffame.html" style="text-decoration: none;color: white;">Hall of Fame</a></li>
